--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="//cdn.jsdelivr.net/npm/pdfjs-dist@2.0.943/build/pdf.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/pdfjs-dist@2.0.943/web/pdf_viewer.min.js"></script>
+    <script>
+      // pdfjsWorker.workerSrc = "//cdn.jsdelivr.net/npm/pdfjs-dist@2.0.943/build/pdf.worker.min.js";
+    </script>
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
